--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
                 <div class="auth-buttons">
                     <a href="signin.html" class="btn sign-in">Sign In</a>
-                    <a href="Admin.html" class="btn admin-login">Admin Login</a>
+                    <a href="admin.html" class="btn admin-login">Admin Login</a>
                 </div>
             </nav>
             <button id="menu-toggle" class="menu-toggle" aria-label="Toggle navigation">
@@ -174,4 +174,5 @@
 <Script src="index.js"></Script>
 
 </body>
+
 </html>
